LF-3748 Add shouldFixTableLayout; make sure footer isn't truncated

--- a/packages/webapp/src/components/Finances/Transaction/ExpandedContent/styles.module.scss
+++ b/packages/webapp/src/components/Finances/Transaction/ExpandedContent/styles.module.scss
@@ -62,6 +62,7 @@ button.toDetail {
 
   .footer {
     text-transform: uppercase;
+    overflow: visible;
   }
 }
 
